--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body{
-    background-color: crimson;
+    background-color: rgb(88, 97, 99);
 }
 
 h1{
     text-align: center;
-    color: brown;
+    color: rgba(90, 84, 84, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
     font-weight: 200;
